src/objects/meeting__c.object
<CustomObject>
    <fields>
        <fullName>Anmerkung__c</fullName>
        <label>Anmerkung</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Anzahl_Vorstaende__c</fullName>
        <label>Anzahl Vorstände</label>
        <summaryFilterItems>
            <field>participants__c.Teilnahmestatus__c</field>
            <operation>equals</operation>
            <value>anwesend</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>participants__c.Teilnehmer_Rolle__c</field>
            <operation>equals</operation>
            <value>Vorstand, erweiterter Vorstand</value>
        </summaryFilterItems>
        <summaryForeignKey>participants__c.meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ende__c</fullName>
        <label>Ende</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartZeit__c</fullName>
        <label>StartZeit</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Vorstandssitzung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartZeit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vorstandssitzung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vorstandssitzung</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>